# 202603_hackathon_proteomics

./: .gitignore  pyproject.toml
msmudata/: .gitignore  README.md
msmudata/data/: download.sh
msmudata/notebooks/: DataIntegration.ipynb  DataIntegration_new.ipynb  R-interoperability.R  demo_aggregation.ipynb  demo_hierarchical_mudata.ipynb  extract_filtered_anndata_draft.ipynb  generate-data.ipynb  ingestion_clean.ipynb  linked_data_draft.ipynb  minimal-data.ipynb  multi_indices_demo.ipynb  slice_adjancency_matrix_draft.ipynb  slice_adjancency_matrix_draft_qpx.ipynb  viz.ipynb
msmudata/rfc/: RFC.md
msmudata/src/: __init__.py  adjacency_matrix_subset.py  adjancency_matrix_construct.py  aggregation.py  feature_mapping.py  hierarchical_mudata.py  linked_data.py  psm_to_mudata.py  qpx.py  synthetic.py  synthetic_data.py  visualization.py
tests/: test_qpx.py
