[project]
name = "msmudata-jp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.4",
    "duckdb>=1.5.1",
    "matplotlib>=3.10.8",
    "mudata>=0.3.3",
    "numpy>=2.0",
    "pandas>=2.0",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "scipy>=1.15.3",
]
